# rs_windows_service_controller

./: Cargo.toml  README.md
src/: dword.rs  lib.rs
