[package]
name = "windows_service_controller"
description = "A library to control windows service"
version = "0.1.3"
edition = "2021"
authors = ["lers梦魔"]
license = "MIT"
homepage = "https://github.com/1412150209/rc_windows_service_controller"
repository = "https://github.com/1412150209/rc_windows_service_controller"
readme = "README.md"
keywords = ["windows", "service"]
exclude = ["/src/main.rs", "/target", ".*"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.54.0", features = ["Win32_System_Services", "Win32_Security"] }
windows_macro = { git = "https://github.com/1412150209/windows_macro", version = "0.0.3" }
widestring = { version = "1.0.2" }
lazy_static = "1.4.0"
